<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="about">About</string>
    <string name="license">License</string>
    <string name="app_name">genpasswd</string>
    <string name="charactor_label">Charactor</string>
    <string name="copy_to_clipboard">Copied password to clipboard. \"%s\";</string>
    <string name="domain_hint">example.com</string>
    <string name="domain_label">Domain</string>
    <string name="error">Error</string>
    <string name="generate_label">Generate</string>
    <string name="length_label">Length</string>
    <string name="ok">OK</string>
    <string name="passphrase_label">Master Password (Passphrase)</string>
    <string name="passphrase_hint">password</string>
    <string name="salt_hint">salt</string>
    <string name="salt_label">Optional Salt</string>
    <string name="about_message">
        This is a simple password generator
        with algorithm base64(sha1(domain+\":\"+passphrase)) or
        base64(sha1(domain+\":\"+salt+\":\"+passphrase)).
        </string>
    <string name="license_message">
        Copyright (c) 2010 Satoshi Fukutomi.\n
        All rights reserved.\n
        \n
        Redistribution and use in source and binary forms, with or without
        modification, are permitted provided that the following conditions
        are met:\n
        1. Redistributions of source code must retain the above copyright
           notice, this list of conditions and the following disclaimer.\n
        2. Redistributions in binary form must reproduce the above copyright
           notice, this list of conditions and the following disclaimer in the
           documentation and/or other materials provided with the distribution.
        \n\n
        THIS SOFTWARE IS PROVIDED BY THE AUTHORS AND CONTRIBUTORS ``AS IS\'\'
        AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO,
        THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR
        PURPOSE ARE DISCLAIMED.  IN NO EVENT SHALL THE AUTHORS OR CONTRIBUTORS
        BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR
        CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF
        SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR
        BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY,
        WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR
        OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF
        ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
        </string>
</resources>
