<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

<!-- Toolbar -->
<androidx.appcompat.widget.Toolbar
     android:id="@+id/my_toolbar"
     android:layout_width="match_parent"
     android:layout_height="?attr/actionBarSize"
     android:background="?attr/colorPrimary"
     android:elevation="4dp"
     android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
     app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
     app:title="genpasswd"
     />

<!-- Domain Field -->
<TextView
    android:layout_width="match_parent" 
    android:layout_height="wrap_content" 
    android:text="@string/domain_label"
    />
<EditText
    android:id="@+id/domain_field"
    android:layout_width="match_parent" 
    android:layout_height="wrap_content" 
    android:hint="@string/domain_hint"
    android:autofillHints="@string/domain_hint"
    android:inputType="textAutoComplete"
    android:freezesText="true"
    android:minHeight="48dp"
    />

<!-- Passphrase Field -->
<TextView
    android:layout_width="match_parent" 
    android:layout_height="wrap_content" 
    android:text="@string/passphrase_label"
    />
<EditText
    android:id="@+id/passphrase_field"
    android:layout_width="match_parent" 
    android:layout_height="wrap_content" 
    android:hint="@string/passphrase_hint"
    android:autofillHints="@string/passphrase_hint"
    android:inputType="textPassword"
    android:freezesText="true"
    android:minHeight="48dp"
    />

<!-- Generate Button -->
<Button
    android:id="@+id/generate_button"
    android:layout_width="match_parent" 
    android:layout_height="wrap_content" 
    android:text="@string/generate_label"
    />

<!-- Salt Field -->
<TextView
    android:layout_width="match_parent" 
    android:layout_height="wrap_content" 
    android:text="@string/salt_label"
    />
<EditText
    android:id="@+id/salt_field"
    android:layout_width="match_parent" 
    android:layout_height="wrap_content" 
    android:hint="@string/salt_hint"
    android:autofillHints="@string/salt_hint"
    android:inputType="textAutoComplete"
    android:freezesText="true"
    android:minHeight="48dp"
    />

<!-- Charactor Set Field -->
<TextView
    android:layout_width="match_parent" 
    android:layout_height="wrap_content"
    android:text="@string/charactor_label"
    />
<Spinner
    android:id="@+id/charactor_field"
    android:layout_width="match_parent" 
    android:layout_height="wrap_content"
    android:entries="@array/charactor_labels"
    android:minHeight="48dp"
    />

<!-- Length Field -->
<TextView
    android:layout_width="match_parent" 
    android:layout_height="wrap_content" 
    android:text="@string/length_label"
    />
<Spinner
    android:id="@+id/length_field"
    android:layout_width="match_parent" 
    android:layout_height="wrap_content"
    android:entries="@array/length_labels"
    android:minHeight="48dp"
    />

</LinearLayout>
